1. Added Aura App 2. Fixed serialization problem 3. Added quick action to forceignore and removed layout refrence(it was not getting pushed to my scratch org)

--- a/force-app/main/default/layouts/Account-Account Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Account-Account Layout.layout-meta.xml
@@ -177,11 +177,11 @@
             <actionType>CustomButton</actionType>
             <sortOrder>2</sortOrder>
         </platformActionListItems>
-        <platformActionListItems>
+        <!-- <platformActionListItems>
             <actionName>Account.ActivateVfAction</actionName>
             <actionType>QuickAction</actionType>
             <sortOrder>3</sortOrder>
-        </platformActionListItems>
+        </platformActionListItems> -->
     </platformActionList>
     <quickActionList/>
     <relatedContent>
