--- a/force-app/main/default/pages/activateAccountButton.page
+++ b/force-app/main/default/pages/activateAccountButton.page
@@ -1,15 +1,15 @@
-<apex:page standardController="Account" extensions="ActivateAccountCtrl" tabStyle="Account" recordSetVar="accounts">
-
+<apex:page standardController="Account" applyBodyTag="false" extensions="ActivateAccountCtrl" tabStyle="Account" recordSetVar="accounts">
     <apex:includeLightning />
 
-    <div id="addHere" />
+    <body>
+        <div id="addHere" />
+    </body>
 
     <apex:form >
         <apex:actionFunction action="{!redirectToList}" name="close" />
     </apex:form>
     
     <script>
-
         $Lightning.use("c:activateAccountsApp", () => {
             const accountIds = {!serializedAccountIds};
 
@@ -22,4 +22,11 @@
 
         document.addEventListener("close", () => close());
     </script>
+    
+    <style>
+        body {
+            background: url("https://res.cloudinary.com/hy4kyit2a/f_auto,fl_lossy,q_70/learn/modules/lightning_design_system/lightning-design-system3/images/9830e3e95f11941fe2d0f3a14230f714_unit3-listview-wireframe.png") no-repeat;
+            background-size: cover;
+        }
+    </style>
 </apex:page>
