Renamed Aura app

--- a/force-app/main/default/pages/activateAccountButton.page
+++ b/force-app/main/default/pages/activateAccountButton.page
@@ -10,7 +10,7 @@
     </apex:form>
     
     <script>
-        $Lightning.use("c:activateAccountsApp", () => {
+        $Lightning.use("c:myApp", () => {
             const accountIds = {!serializedAccountIds};
 
             $Lightning.createComponent("c:activateAccounts", {accountIds}, "addHere");
