--- a/force-app/main/default/layouts/Notification__c-Notification Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Notification__c-Notification Layout.layout-meta.xml
@@ -18,6 +18,10 @@
                 <behavior>Required</behavior>
                 <field>txt_Status__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>txt_JobName__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
