--- a/force-app/main/default/aura/editPmdGate/editPmdGate.cmp
+++ b/force-app/main/default/aura/editPmdGate/editPmdGate.cmp
@@ -1,9 +1,13 @@
 <aura:component controller="TestCtrl" implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
     <aura:attribute name="configuration" type="Object" />
-
+    
+    <!-- LAX -->
     <c:lax context="{!this}" />
+
+    <!-- EVENTS -->
     <aura:handler name="init" value="{!this}" action="{!c.init}"/>
 
+    <!-- MARKUP -->
     <fieldset class="slds-box slds-theme_default slds-container_small">
         <legend id="newexpenseform" class="slds-text-heading_small slds-p-vertical_medium">PMD Settings</legend>
 
@@ -11,7 +15,7 @@
             <lightning:input label="Ruleset Name" name="rule" value="{!v.configuration.rule}" />
             <lightning:input type="file" label="Ruleset File" name="file" value="{!v.configuration.file}" />
 
-            <lightning:button aura:id="submit" type="submit" label="Save" onclick="{!c.save}" />
+            <lightning:button type="submit" label="Save" onclick="{!c.save}" />
         </form>
     </fieldset>
 </aura:component>
