--- a/force-app/main/default/aura/apexTestUi/apexTestUi.cmp
+++ b/force-app/main/default/aura/apexTestUi/apexTestUi.cmp
@@ -1,9 +1,5 @@
 <aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
-    <fieldset class="slds-box slds-theme_default slds-container_small">
-        <legend id="newexpenseform" class="slds-text-heading_small slds-p-vertical_medium">Apex Test Settings</legend>
-
-        <form class="slds-form_stacked">
-            <lightning:input required="true" type="percentage" label="Minimum Coverage %" name="coverage" />
-        </form>
-    </fieldset>
+    <c:configurationEditor title="Apex Test Settings">
+        <lightning:input required="true" type="percentage" label="Minimum Coverage %" name="coverage" />
+    </c:configurationEditor>
 </aura:component>
