--- a/force-app/main/default/aura/editPmdGate/editPmdGate.cmp
+++ b/force-app/main/default/aura/editPmdGate/editPmdGate.cmp
@@ -1,21 +1,6 @@
-<aura:component controller="TestCtrl" implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
-    <aura:attribute name="configuration" type="Object" />
-    
-    <!-- LAX -->
-    <c:lax context="{!this}" />
-
-    <!-- EVENTS -->
-    <aura:handler name="init" value="{!this}" action="{!c.init}"/>
-
-    <!-- MARKUP -->
-    <fieldset class="slds-box slds-theme_default slds-container_small">
-        <legend id="newexpenseform" class="slds-text-heading_small slds-p-vertical_medium">PMD Settings</legend>
-
-        <form aura:id="form" class="slds-form_stacked">
-            <lightning:input label="Ruleset Name" name="rule" value="{!v.configuration.rule}" />
-            <lightning:input type="file" label="Ruleset File" name="file" value="{!v.configuration.file}" />
-
-            <lightning:button type="submit" label="Save" onclick="{!c.save}" />
-        </form>
-    </fieldset>
+<aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
+    <c:configurationEditor title="PMD Settings">
+        <lightning:input label="Ruleset Name" name="rule" value="{!v.configuration.rule}" />
+        <lightning:input type="file" label="Ruleset File" name="file" value="{!v.configuration.file}" />
+    </c:configurationEditor>
 </aura:component>
