--- a/force-app/main/default/aura/editScriptGate/editScriptGate.cmp
+++ b/force-app/main/default/aura/editScriptGate/editScriptGate.cmp
@@ -1,11 +1,7 @@
 <aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
-    <fieldset class="slds-box slds-theme_default slds-container_small">
-        <legend id="newexpenseform" class="slds-text-heading_small slds-p-vertical_medium">Manual Test Script</legend>
-
-        <form class="slds-form_stacked">
-            <lightning:textarea required="true" label="Given" name="given" />
-            <lightning:textarea required="true" label="When" name="when" />
-            <lightning:textarea required="true" label="Then" name="then" />
-        </form>
-    </fieldset>
+    <c:configurationEditor title="Manual Test Script">
+        <lightning:textarea required="true" label="Given" name="given"  value="{!v.configuration.given}" />
+        <lightning:textarea required="true" label="When" name="when"  value="{!v.configuration.when}" />
+        <lightning:textarea required="true" label="Then" name="then"  value="{!v.configuration.then}" />
+    </c:configurationEditor>
 </aura:component>
