--- a/force-app/main/default/aura/editUxTest/editUxTest.cmp
+++ b/force-app/main/default/aura/editUxTest/editUxTest.cmp
@@ -1,12 +1,6 @@
 <aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
-    <fieldset class="slds-box slds-theme_default slds-container_small">
-        <legend id="newexpenseform" class="slds-text-heading_small slds-p-vertical_medium">Manual Test Script</legend>
-
-        <form class="slds-form_stacked">
-            <lightning:textarea required="true" label="Quentinel QWeb Script" name="qweb" />
-
-            <lightning:button type="record" label="Record..." onclick="{!c.save}" />
-            <lightning:button type="submit" label="Save" onclick="{!c.save}" />
-        </form>
-    </fieldset>
+    <c:configurationEditor title="Quentinel QWeb Script">
+        <lightning:textarea required="true" label="Quentinel Pace Script" name="script"  value="{!v.configuration.script}" />
+        <lightning:button type="record" label="Record..." onclick="{!c.save}" />
+    </c:configurationEditor>
 </aura:component>
