Added some execute buttons

--- a/force-app/main/default/layouts/Test__c-Test Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Test__c-Test Layout.layout-meta.xml
@@ -19,6 +19,10 @@
                 <behavior>Required</behavior>
                 <field>pkl_Status__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Execute__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
