--- a/force-app/main/default/aura/editPmdGate/editPmdGate.cmp
+++ b/force-app/main/default/aura/editPmdGate/editPmdGate.cmp
@@ -1,6 +1,9 @@
 <aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
-    <c:configurationEditor title="PMD Settings">
-        <lightning:input label="Ruleset Name" name="rule" value="{!v.configuration.rule}" />
+    <aura:attribute name="configuration" type="Object" />
+    <aura:handler name="init" value="{!this}" action="{!c.init}"/>
+
+    <c:configurationEditor title="PMD Settings" recordId="{!v.recordId}" aura:id="editor">
+        <lightning:input label="Ruleset Name" name="rule" value="{!v.configuration.rule}" /> 
         <lightning:input type="file" label="Ruleset File" name="file" value="{!v.configuration.file}" />
     </c:configurationEditor>
 </aura:component>
