--- a/force-app/main/default/aura/apexTestUi/apexTestUi.cmp
+++ b/force-app/main/default/aura/apexTestUi/apexTestUi.cmp
@@ -1,5 +1,8 @@
 <aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
-    <c:configurationEditor title="Apex Test Settings" recordId="{!v.recordId}">
+    <aura:attribute name="configuration" type="Object" />
+    <aura:handler name="init" value="{!this}" action="{!c.init}"/>
+
+    <c:configurationEditor title="Apex Test Settings" recordId="{!v.recordId}" aura:id="editor">
         <lightning:input required="true" type="percentage" label="Minimum Coverage %" name="coverage" value="{!v.configuration.coverage}" />
     </c:configurationEditor>
 </aura:component>
