--- a/force-app/main/default/aura/editClaytonGate/editClaytonGate.cmp
+++ b/force-app/main/default/aura/editClaytonGate/editClaytonGate.cmp
@@ -1,5 +1,8 @@
 <aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
-    <c:configurationEditor title="Setup Clayton Run" recordId="{!v.recordId}">
+    <aura:attribute name="configuration" type="Object" />
+    <aura:handler name="init" value="{!this}" action="{!c.init}"/>
+
+    <c:configurationEditor title="Setup Clayton Run"  recordId="{!v.recordId}" aura:id="editor">
         <lightning:input type="url" label="Clayton Server" name="server"  value="{!v.configuration.server}" />
         <lightning:input label="Accountname" name="account"  value="{!v.configuration.account}" />
         <lightning:input type="password" label="Password" name="password"  value="{!v.configuration.password}" />
