--- a/force-app/main/default/layouts/DynamicUi__mdt-Dynamic Ui Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/DynamicUi__mdt-Dynamic Ui Layout.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Required</behavior>
                 <field>UiApiName__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>UiLocation__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -62,6 +66,8 @@
         <customLabel>false</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
+        <layoutColumns/>
+        <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
